crates/carta/tests/snapshots/golden_e2e__rtf__native__bookmark-empty.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Start"
    , Space
    , Str "middle"
    , Space
    , Span
        ( "named" , [] , [] ) [ Str "anchor" , Space , Str "text" ]
    , Space
    , Str "end."
    ]
]
