crates/carta/tests/snapshots/golden_e2e__rtf__native__bookmark.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "See"
    , Space
    , Span
        ( "anchor" , [] , [] )
        [ Str "this" , Space , Str "section" ]
    , Space
    , Str "below."
    ]
]
