crates/carta/tests/snapshots/golden_e2e__rtf__native__caps.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ SmallCaps [ Str "small" , Space , Str "caps" ]
    , Space
    , Str "and"
    , Space
    , Str "ALL"
    , Space
    , Str "CAPS."
    ]
]
