crates/carta/tests/snapshots/golden_e2e__rtf__native__control-word-delimiter.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "a\8212b"
    , Space
    , Str "then"
    , Space
    , Str "c\8212d."
    ]
]
