crates/carta/tests/snapshots/golden_e2e__rtf__native__encoded-chars.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "caf\233"
    , Space
    , Str "and"
    , Space
    , Str "\233"
    , Space
    , Str "unicode."
    ]
]
