crates/carta/tests/snapshots/golden_e2e__rtf__native__heading-style-outline.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Header
    1 ( "" , [] , [] ) [ Str "Chapter" , Space , Str "Title" ]
, Para [ Str "Body" , Space , Str "paragraph." ]
, Header
    2 ( "" , [] , [] ) [ Str "Section" , Space , Str "Title" ]
]
