crates/carta/tests/snapshots/golden_e2e__rtf__native__headings.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Header
    1 ( "" , [] , [] ) [ Str "First" , Space , Str "Heading" ]
, Para [ Str "Body" , Space , Str "text." ]
, Header
    2 ( "" , [] , [] ) [ Str "Sub" , Space , Str "Heading" ]
]
