crates/carta/tests/snapshots/golden_e2e__rtf__native__hidden-text.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Shown"
    , Space
    , Str "then"
    , Space
    , Str "shown"
    , Space
    , Str "again."
    ]
]
