crates/carta/tests/snapshots/golden_e2e__rtf__native__hyperlink-anchor.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Read"
    , Space
    , Str "the"
    , Space
    , Link
        ( "" , [] , [] ) [ Str "introduction" ] ( "#_Toc1" , "" )
    , Space
    , Str "first."
    ]
]
